topic visibility ui

--- a/src/app.css
+++ b/src/app.css
@@ -122,7 +122,17 @@
 }
 
 @layer components {
+  .ghost-button {
+    @apply focus-visible:bg-accent! data-[active=true]:bg-accent/50 hover:bg-accent! flex w-full cursor-pointer items-center gap-x-2 border-t p-12 text-start text-sm outline-0 transition-colors [&_svg:not([class*='size-'])]:size-4;
+  }
+
   .inline-button {
     @apply text-sm underline-offset-4 outline-0 hover:underline focus-visible:underline;
+  }
+}
+
+@layer utilities {
+  .screen-width {
+    @apply mx-auto w-full max-w-lg;
   }
 }
